[gd_scene load_steps=5 format=3 uid="uid://d1646p6sf231w"]

[ext_resource type="Script" path="res://pause-start/menu.gd" id="1_chbrr"]
[ext_resource type="Texture2D" uid="uid://df3tbptc2pfxa" path="res://Art/treeBG.png" id="2_3jhui"]
[ext_resource type="FontFile" uid="uid://l13vsimldkel" path="res://pause-start/DeliusSwashCaps-Regular.ttf" id="3_41fkj"]
[ext_resource type="Texture2D" uid="uid://butnn5t815m25" path="res://pause-start/Overgreen_Logo_Light.png" id="4_0wpmj"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_chbrr")

[node name="PanelContainer" type="PanelContainer" parent="."]
z_index = -9
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="PanelContainer"]
position = Vector2(589, 347.18)
scale = Vector2(0.313, 0.313)
texture = ExtResource("2_3jhui")

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="OvergreenLogoDark" type="Sprite2D" parent="PanelContainer/PanelContainer"]
position = Vector2(244.444, 86)
scale = Vector2(0.23, 0.23)
texture = ExtResource("4_0wpmj")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="PanelContainer2" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer"]
layout_mode = 2

[node name="Start New" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer"]
z_index = 3
custom_minimum_size = Vector2(63, 0)
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("3_41fkj")
theme_override_font_sizes/font_size = 10
text = "New Game"

[node name="Continue" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer"]
z_index = 3
custom_minimum_size = Vector2(63, 0)
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("3_41fkj")
theme_override_font_sizes/font_size = 10
text = "Continue"

[node name="Options" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer"]
z_index = 3
custom_minimum_size = Vector2(63, 0)
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("3_41fkj")
theme_override_font_sizes/font_size = 10
text = "Options"

[node name="Credits" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer"]
z_index = 3
custom_minimum_size = Vector2(63, 0)
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("3_41fkj")
theme_override_font_sizes/font_size = 10
text = "Credits"

[node name="Exit" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer"]
z_index = 3
custom_minimum_size = Vector2(63, 0)
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("3_41fkj")
theme_override_font_sizes/font_size = 10
text = "Quit"

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 11)
layout_mode = 2
size_flags_vertical = 8

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/Start New" to="." method="_on_start_new_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
